# AgarthaGame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: assets.h  collisions.h  dbg.h  game.h  game_maps.h  game_object.h  gobjects.h  hashing.h  player.h  scene.h
include/ds/: hashmap.h  vector.h
include/physics/: physics.h
include/res/: ashtar_sheran_png.h  blocks_png.h
src/: assets.c  collisions.c  game.c  game_maps.c  game_object.c  gobjects.c  main.c  player.c  scene.c
src/ds/: hashmap.c  vector.c
src/physics/: physics.c
